n8n/n8n-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: n8n
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
      - image: docker.n8n.io/n8nio/n8n:2.19.5
        name: n8n
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 25m
            memory: 200Mi
          limits:
            cpu: 500m
            memory: 500Mi
        volumeMounts:
        - name: data
          mountPath: /home/node/.n8n
        ports:
          - containerPort: 80
      securityContext:
        fsGroup: 1000 
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: longhorn-pvc-n8n-data
