n8n/n8n-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: n8n-svc
spec:
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: n8n
