n8n/n8n-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: n8n-ingressroute
  namespace: n8n
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`n8n.dysnomia.studio`) && !PathPrefix("/metrics")
    kind: Rule
    services:
    - name: n8n-svc
      port: 80
    middlewares:
      - name: security
  tls:
    certResolver: le
